Strut and baseline align (buggy)

--- a/Concordia/src/less/grid/grid.less
+++ b/Concordia/src/less/grid/grid.less
@@ -28,15 +28,15 @@
 		position: relative;
 		
 		// overflow: hidden;
-		// .strut {
-		// 	display: inline-block;
-		// 	width: 7px;
-		// 	background-color: fadeout(black, 60%);
-		// }
+		.strut {
+			display: inline-block;
+			width: 7px;
+			background-color: fadeout(black, 60%);
+		}
 		.text {
-			// vertical-align: baseline;
-			position: absolute;
-			top: 0;
+			vertical-align: baseline;
+			// position: absolute;
+			// top: 0;
 			// text-decoration: underline;
 	        // overflow: unset,
 	        // white-space: nowrap,
